--- a/licenses/mit.erb
+++ b/licenses/mit.erb
@@ -1,6 +1,11 @@
+<%
+  copyright_year = config.dig("project", "copyright", "year")
+  current_year = Time.now.year
+%>
+
 This software is licensed under the MIT License.
 
-Copyright <%= Time.now.year %> <%= config.dig("project", "copyright") %>.
+Copyright <%= copyright_year && copyright_year < current_year ? "#{copyright_year}-#{curent_year}" : current_year %> <%= config.dig("project", "copyright", "attribution") %>.
 
 Permission is hereby granted, free of charge, to any person obtaining a
 copy of this software and associated documentation files (the
