--- a/licenses/mit.erb
+++ b/licenses/mit.erb
@@ -1,7 +1,10 @@
-<%
-  copyright_year = config.dig("project", "copyright", "year")&.to_i
-  current_year = Time.now.year
-%>
+
+
+
+<% copyright_year = config.dig("project", "copyright", "year")&.to_i %>
+
+
+<% current_year = Time.now.year %>
 
 This software is licensed under the MIT License.
 
