--- a/licenses/mit.erb
+++ b/licenses/mit.erb
@@ -1,14 +1,9 @@
-
-
-
 <% copyright_year = config.dig("project", "copyright", "year")&.to_i %>
-
-
 <% current_year = Time.now.year %>
 
 This software is licensed under the MIT License.
 
-Copyright <%= copyright_year && copyright_year < current_year ? "#{copyright_year}-#{curent_year}" : current_year %> <%= config.dig("project", "copyright", "attribution") %>.
+Copyright <%= copyright_year && copyright_year < current_year ? "#{copyright_year}-#{current_year}" : current_year %> <%= config.dig("project", "copyright", "attribution") %>.
 
 Permission is hereby granted, free of charge, to any person obtaining a
 copy of this software and associated documentation files (the
