--- a/ruby/gem/gem.gemspec.erb
+++ b/ruby/gem/gem.gemspec.erb
@@ -1,6 +1,6 @@
 # frozen_string_literal: true
 
-require File.expand_path("../lib/<%= config.project.slug %>/version", __FILE__)
+require File.expand_path("../lib/<%= config.ruby.gem.path! || config.project.slug! %>/version", __FILE__)
 
 Gem::Specification.new do |spec|
   spec.name = <%= config.project.slug!.inspect %>
